<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:text="@string/add_title_to_task"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/title_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/title_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:ems="10"
            android:hint="@string/enter_title"
            android:textSize="@dimen/entry_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="164dp"
            android:layout_height="49dp"
            android:layout_alignTop="@+id/desc_entry"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="9dp"
            android:text="@string/add_value_to_task"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/desc_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_entry"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/desc_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:ems="10"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:textSize="@dimen/entry_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_entry" />

        <TextView
            android:id="@+id/priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:text="@string/priority_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_entry" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/radio"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/priority_label"
            app:layout_constraintTop_toBottomOf="@+id/desc_entry">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialRed"
                android:checked="true"
                android:text="@string/high_priority"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialOrange"
                android:text="@string/med_priority"
                android:theme="@style/WhiteRadioButton" />



            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialGreen"
                android:text="@string/low_priority"
                android:theme="@style/WhiteRadioButton" />
        </RadioGroup>

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/set_date"
            android:inputType="text"
            android:textSize="@dimen/entry_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="@dimen/calendar_img"
            android:layout_height="@dimen/calendar_img"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_event_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/date_edit"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:tint="@color/color4" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@color/black"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>